samples/_failures_safe/1761138576_b8cdf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e83cd655.c: In function ‘main’:
./samples/SAFE/__tmp_e83cd655.c:141:5: error: expected declaration or statement at end of input
  141 |     if (!validate_log_data(entries, entry_count)) {
      |     ^~
./samples/SAFE/__tmp_e83cd655.c:141:5: error: expected declaration or statement at end of input
